wip with errors
Co-authored-by: samuel-masjam <samuel-masjam@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,18 @@
 {
   "extends": "@quasar/app-vite/tsconfig-preset",
   "compilerOptions": {
-    "baseUrl": "."
+    "jsx": "preserve",
+    "paths": {
+      "models/*": [
+        "src/models/*"
+      ],
+      "types/*": [
+        "src/types/*"
+      ]
+    },
+    "baseUrl": ".",
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false,
+    "strictPropertyInitialization": false
   }
-}
+}  
