--- a/package.json
+++ b/package.json
@@ -7,26 +7,45 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
+    "test:e2e": "cross-env NODE_ENV=test start-test \"quasar dev\" http-get://localhost:9000 \"cypress open --e2e\"",
+    "test:e2e:ci": "cross-env NODE_ENV=test start-test \"quasar dev\" http-get://localhost:9000 \"cypress run --e2e\"",
+    "test:component": "cross-env NODE_ENV=test cypress open --component",
+    "test:component:ci": "cross-env NODE_ENV=test cypress run --component"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@vueauth/sanctum": "^1.0.0-alpha.20",
+    "@vueuse/core": "^9.12.0",
+    "lodash-es": "^4.17.21",
+    "pinia": "^2.0.30",
+    "pinia-orm": "^1.5.1",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
+    "vue-auth": "^1.0.0-alpha.1",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@quasar/app-vite": "^1.0.0",
+    "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.0.0",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "@vueauth/quasar-app-extension-auth": "^1.0.0-alpha.29",
+    "autoprefixer": "^10.4.2",
+    "change-case": "^4.1.2",
+    "cypress": "^12.2.0",
     "eslint": "^8.10.0",
-    "eslint-plugin-vue": "^9.0.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "@types/node": "^12.20.21",
-    "@quasar/app-vite": "^1.0.0",
-    "autoprefixer": "^10.4.2",
+    "eslint-plugin-vue": "^9.0.0",
+    "hygen": "^6.2.11",
+    "inflection": "^2.0.1",
     "typescript": "^4.5.4"
   },
   "engines": {
