--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "@vueuse/core": "^9.5.0",
     "@vueuse/shared": "^9.5.0",
     "lodash-es": "^4.17.21",
@@ -27,8 +29,8 @@
     "@quasar/app-vite": "^1.0.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^12.20.21",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "@unocss/preset-icons": "^0.46.5",
     "@unocss/preset-uno": "^0.46.5",
     "@vue-macros/volar": "^0.5.3",
@@ -39,7 +41,7 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.0.0",
+    "eslint-plugin-vue": "^9.9.0",
     "hygen": "^6.2.11",
     "inflection": "^2.0.0",
     "typescript": "^4.5.4",
